Fixed challenges, needs testing

--- a/static/error.html
+++ b/static/error.html
@@ -10,13 +10,13 @@
 <body>
     <div class="container">
         <header>
-            <div class="heading"><p>404</p></div>
+            <div class="heading"><p>40x</p></div>
         </header>
         <main> 
             Mario could not find the page you requested 
 </main>
 <footer>
-    <div class="foot-note"><a href="https://ctf.sheltoncyril.io">Back to challenge site</a></div>
+    <div class="foot-note"><a href="https://ctf.thundrcloud.net/challenges">Back to challenge site</a></div>
 </footer>
 </div>
 </body>
