--- a/static/Inspect/index.html
+++ b/static/Inspect/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Template HTML</title>
+    <title>Inspect element?</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <div class="heading"><p>Inspect element<!-- FLAG{djJfIdo&32IGm} --></p></div>
+            <div class="heading"><p>Inspect element<!-- flag{StartedFromTheBottom} --></p></div>
         </header>
         <main>
         <div class='topdown'>But wait...which element?!</div>
